--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ py==1.7.0
 pyparsing==2.3.1
 pytest==3.10.1
 python-dateutil==2.8.0
-PyYAML==3.13
+PyYAML>=4.2b1
 regex==2018.1.10
 requests==2.21.0
 scipy==1.2.1
